data/derived/fa15/progs/unify/prog2097.ml.out
Characters 57-61:
  wwhile (funt,b);;
          ^^^^
Error: This expression has type ('a -> 'a) * bool
       but an expression was expected of type 'b -> 'b * bool
